--- a/src/app/componenets/top-bar/top-bar.component.html
+++ b/src/app/componenets/top-bar/top-bar.component.html
@@ -1,4 +1,4 @@
 <div class="d-flex align-items-center px-3" style="height: 100%;">
-    <button class="btn btn-light rounded-circle mr-3" data-toggle="tooltip" data-placement="right" title="Menu" (click)="expandMenu()"><i class="fas fa-bars"></i></button>
+    <button class="btn btn-light rounded-circle mr-3" (click)="expandMenu()"><i class="fas fa-bars"></i></button>
     <span class="ml-auto text-nowrap">Welcome, Luke Greyling</span>
 </div>
