--- a/src/app/pages/dashboard/users/users.component.html
+++ b/src/app/pages/dashboard/users/users.component.html
@@ -1,8 +1,57 @@
-<div *ngIf="loadingUsers">
-    <p>Loading...</p>
-</div>
-<div *ngIf="!loadingUsers">
-    <p *ngFor="let user of users">
-        {{ user.name }}, {{ user.surname }}, {{ user.email }}, {{ user.dateAdded }}, {{ user.admin }}
-    </p>
+<div class="container-fluid p-3">
+    <div *ngIf="loadingUsers">
+        <div class="py-5 d-flex align-items-center justify-content-center" *ngIf="loadingUsers">
+            <div class="spinner-border" role="status"></div>
+            <span class="ml-2 text-nowrap">Loading users...</span>
+        </div>
+    </div>
+    <div *ngIf="!loadingUsers">
+        <div class="d-flex align-items-center mb-3">
+            <h1 class="h3 my-auto text-nowrap">Users</h1>
+        </div>
+        <table class="custom-table bg-white border">
+            <thead>
+                <tr>
+                    <th scope="col">Full Name</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Date Added</th>
+                    <th scope="col">Role</th>
+                    <th scope="col">Status</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let user of users">
+                    <td>{{user.name}} {{user.surname}}</td>
+                    <td>{{user.email}}</td>
+                    <td>November 11, 2021</td>
+                    <td>
+                        <span *ngIf="user.admin">Admin</span>
+                        <span *ngIf="!user.admin">User</span>
+                    </td>
+                    <td>
+                        <span class="d-flex align-items-center"><i class="fas fa-circle text-success mr-2"></i>Online</span>
+                    </td>
+                    <td>
+                        <div class="dropdown">
+                            <button class="btn btn-light btn-circle" type="button" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fas fa-ellipsis-v"></i>
+                            </button>
+                            <div class="dropdown-menu dropdown-menu-right box-shadow" aria-labelledby="userMenu">
+                                <button class="dropdown-item" type="button"><i class="fas fa-folder-open"></i>View All Details</button>
+                                <button class="dropdown-item" type="button"><i class="fas fa-users-cog"></i>Make Admin</button>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <button class="dropdown-item text-danger" type="button"><i class="fas fa-user-times"></i>Deactivate</button>
+                                <button class="dropdown-item text-danger" type="button"><i class="fas fa-trash"></i>Delete</button>
+                            </div>
+                        </div>
+                        <!-- <button class="btn btn-outline-danger mr-2"><i class="fas fa-trash mr-2"></i>Delete</button>
+                        <button class="btn btn-main"><i class="fas fa-user-check mr-2"></i>Activate</button> -->
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
