--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -1,1 +1,31 @@
-<p>sign-up works!</p>
+<form class="card p-4">
+    <div class="card-body">
+        <h1 class="text-center mb-5">Sign Up</h1>
+        <div class="form-floating mb-4">
+            <input type="text" class="form-control" id="floatingInput" placeholder="First Name">
+            <label for="floatingInput">First Name</label>
+        </div>
+        <div class="form-floating mb-4">
+            <input type="text" class="form-control" id="floatingInput" placeholder="Last Name">
+            <label for="floatingInput">Last Name</label>
+        </div>
+        <div class="form-floating mb-4">
+            <input type="email" class="form-control" id="floatingInput" placeholder="Email">
+            <label for="floatingInput">Email</label>
+        </div>
+        <div class="form-floating mb-4">
+            <input type="password" class="form-control" id="floatingInput" placeholder="Password">
+            <label for="floatingInput">Password</label>
+        </div>
+        <div class="form-floating mb-4">
+            <input type="password" class="form-control" id="floatingInput" placeholder="Confirm Password">
+            <label for="floatingInput">Confirm Password</label>
+        </div>
+        <button class="btn btn-main w-100 mb-4">
+            <span>Sign Up</span>
+        </button>
+        <div class="text-center">
+            <span>Alreadt have an account? <a [routerLink]="['']">Login</a></span>
+        </div>
+    </div>
+</form>
