--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <router-outlet></router-outlet>
-<div class="area">
+<!-- <div class="area">
     <ul class="circles">
         <li></li>
         <li></li>
@@ -12,4 +12,4 @@
         <li></li>
         <li></li>
     </ul>
-</div>
+</div> -->
