--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -6,7 +6,7 @@
             <input type="Email" class="form-control" id="floatingInput" placeholder="First Name">
             <label for="floatingInput">Email</label>
         </div>
-        <button class="btn btn-main w-100 mb-4" data-toggle="modal" data-target="#verificationCodeModal">
+        <button class="btn btn-primary w-100 mb-4" data-toggle="modal" data-target="#verificationCodeModal">
             <span>Send Verification Code</span>
         </button>
         <div class="text-center">
@@ -41,9 +41,9 @@
                     click <a href="">resend code</a> to receive a new one. If the 
                     problem persists then please contact IT support for additional help.</p>
             </div>
-            <div class="modal-footer bg-secondary border-0">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-main" data-dismiss="modal" [routerLink]="['/create-new-password']">Verify Account</button>
+            <div class="modal-footer bg-light border-0">
+                <button type="button" class="btn btn-light" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" [routerLink]="['/create-new-password']">Verify Account</button>
             </div>
         </div>
     </div>
