--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -1,6 +1,7 @@
 <form class="card p-4">
     <div class="card-body">
-        <h1 class="text-center mb-5">Sign Up</h1>
+        <h1 class="text-center mb-4">Sign Up</h1>
+        <p class="text-center mb-4">Enter your information below to sign up and create an account.</p>
         <div class="form-floating mb-4">
             <input type="text" class="form-control" id="floatingInput" placeholder="First Name">
             <label for="floatingInput">First Name</label>
@@ -21,9 +22,7 @@
             <input type="password" class="form-control" id="floatingInput" placeholder="Confirm Password">
             <label for="floatingInput">Confirm Password</label>
         </div>
-        <button class="btn btn-main w-100 mb-4">
-            <span>Sign Up</span>
-        </button>
+        <button class="btn btn-primary w-100 mb-4">Sign Up</button>
         <div class="text-center">
             <span>Alreadt have an account? <a [routerLink]="['']">Login</a></span>
         </div>
