--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,8 @@
     background: #10147c;  
     background: -webkit-linear-gradient(to left, #3bc4dc, #10147c);  
     width: 100%;
-    height:100vh; 
+    height: 100vh;
+    z-index: 5 !important;
 }
 
 .circles{
@@ -116,4 +117,8 @@
         border-radius: 50%;
     }
 
+}
+
+router-outlet{
+    z-index: 10 !important;
 }
