--- a/src/app/pages/create-new-password/create-new-password.component.html
+++ b/src/app/pages/create-new-password/create-new-password.component.html
@@ -10,7 +10,7 @@
             <input type="password" class="form-control" id="floatingInput" placeholder="Confirm Password">
             <label for="floatingInput">Confirm New Password</label>
         </div>
-        <button class="btn btn-main w-100 mb-4" [routerLink]="['']">
+        <button class="btn btn-primary w-100 mb-4" [routerLink]="['']">
             <span>Update Password</span>
         </button>
         <div class="text-center">
