--- a/src/app/pages/dashboard/users/users.component.html
+++ b/src/app/pages/dashboard/users/users.component.html
@@ -1,14 +1,15 @@
-<div class="container-fluid p-3">
-    <div *ngIf="loadingUsers">
-        <div class="py-5 d-flex align-items-center justify-content-center" *ngIf="loadingUsers">
-            <div class="spinner-border" role="status"></div>
-            <span class="ml-2 text-nowrap">Loading users...</span>
-        </div>
+<div *ngIf="loadingUsers">
+    <div class="py-5 d-flex align-items-center justify-content-center" *ngIf="loadingUsers">
+        <div class="spinner-border" role="status"></div>
+        <span class="ml-2 text-nowrap">Loading users...</span>
     </div>
-    <div *ngIf="!loadingUsers">
-        <div class="d-flex align-items-center mb-3">
-            <h1 class="h3 my-auto text-nowrap">Users</h1>
-        </div>
+</div>
+<div *ngIf="!loadingUsers">
+    <div class="d-flex align-items-center border-bottom p-3">
+        <h3 class="my-0 mr-3">Users</h3>
+        <button class="btn btn-primary ml-auto"><i class="fas fa-plus-circle mr-2"></i>Add New User</button>
+    </div>
+    <div class="container-fluid p-3">
         <table class="custom-table bg-white border">
             <thead>
                 <tr>
@@ -37,8 +38,12 @@
                             <button class="btn btn-light btn-circle" type="button" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-ellipsis-v"></i>
                             </button>
-                            <div class="dropdown-menu dropdown-menu-right box-shadow" aria-labelledby="userMenu">
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
                                 <button class="dropdown-item" type="button"><i class="fas fa-folder-open"></i>View All Details</button>
+                                <button class="dropdown-item" type="button"><i class="fas fa-address-book"></i>View Portfolio</button>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
                                 <button class="dropdown-item" type="button"><i class="fas fa-users-cog"></i>Make Admin</button>
                                 <li>
                                     <hr class="dropdown-divider">
@@ -47,8 +52,8 @@
                                 <button class="dropdown-item text-danger" type="button"><i class="fas fa-trash"></i>Delete</button>
                             </div>
                         </div>
-                        <!-- <button class="btn btn-outline-danger mr-2"><i class="fas fa-trash mr-2"></i>Delete</button>
-                        <button class="btn btn-main"><i class="fas fa-user-check mr-2"></i>Activate</button> -->
+                        <!-- <button class="btn btn-light text-danger mr-2"><i class="fas fa-trash mr-2"></i>Delete</button>
+                        <button class="btn btn-primary"><i class="fas fa-user-check mr-2"></i>Activate</button> -->
                     </td>
                 </tr>
             </tbody>
