--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,7 @@
 <form class="card p-4" [formGroup]="form">
     <div class="card-body">
-        <h1 class="text-center mb-5">Login</h1>
+        <h1 class="text-center mb-4">Login</h1>
+        <p class="text-center mb-4">Welcome to the Rosh Pinah CRM. Enter your email and password below to login.</p>
         <div class="form-floating mb-4">
             <input 
             type="email" 
@@ -39,7 +40,7 @@
             </div>
             <a [routerLink]="['/forgot-password']">Forgot Password?</a>
         </div>
-        <button class="btn btn-main w-100 mb-4" (click)="submit()" [disabled]="loading">
+        <button class="btn btn-primary w-100 mb-4" (click)="submit()" [disabled]="loading">
             <span *ngIf="!loading">Login</span>
             <span *ngIf="loading">
                 <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
