Made a few changes to ui

--- a/src/app/pages/dashboard/settings/manage-account/manage-account.component.html
+++ b/src/app/pages/dashboard/settings/manage-account/manage-account.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-header bg-white p-3">
         <h4>Manage Account</h4>
-        <span>Manage your account details by completing the form below.</span>
+        <span class="text-muted">Manage your account details by completing the form below.</span>
     </div>
     <div class="card-body">
         <form>
