--- a/src/app/pages/dashboard/clients/clients.component.html
+++ b/src/app/pages/dashboard/clients/clients.component.html
@@ -10,7 +10,8 @@
             </div>
             <input type="text" class="form-control" placeholder="Search clients by name, surname, and company...">
         </div>
-        <button class="btn btn-light text-nowrap mr-2" data-bs-toggle="offcanvas" data-bs-target="#clientFiltersOffcanvas" aria-controls="clientFiltersOffcanvas"><i class="fas fa-filter mr-2"></i>Show Filters</button>
+        <button class="btn btn-light text-nowrap mr-2" data-bs-toggle="offcanvas" data-bs-target="#clientFiltersOffcanvas" aria-controls="clientFiltersOffcanvas"><i class="fas fa-filter mr-2"></i>Filters</button>
+        <button class="btn btn-light text-nowrap"><i class="fas fa-eye mr-2"></i>Display</button>
         <button class="btn btn-light text-nowrap"><i class="fas fa-file-excel mr-2"></i>Export Excel</button>
     </div>
     <table class="custom-table border">
@@ -42,12 +43,8 @@
                         </button>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
                             <button class="dropdown-item" type="button"><i class="fas fa-folder-open"></i>View All Details</button>
-                            <button class="dropdown-item" type="button"><i class="fas fa-sticky-note"></i>View Notes</button>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
                             <button class="dropdown-item" type="button"><i class="fas fa-edit"></i>Edit Details</button>
-                            <button class="dropdown-item" type="button"><i class="fas fa-calendar-day"></i>Create Follow Up</button>
+                            <button class="dropdown-item" type="button"><i class="fas fa-calendar-day"></i>Manage Follow Up</button>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
@@ -61,11 +58,14 @@
 </div>
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="clientFiltersOffcanvas" aria-labelledby="clientFiltersOffcanvasLabel">
-    <div class="offcanvas-header">
-        <h5 id="clientFiltersOffcanvasLabel">Filters</h5>
+    <div class="offcanvas-header border-bottom">
+        <div class="d-block">
+            <h4>Filters</h4>
+            <span class="text-muted">Filter the client list using the options below.</span>
+        </div>
         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-        ...
+
     </div>
 </div>
