--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="side-nav">
-    <p class="small text-gray-500 pl-3 mb-1 mt-3">Menu</p>
+    <p class="small text-gray-500 pl-3 mb-1 mt-3">General</p>
     <button class="side-nav-button px-3 py-2" [routerLink]="['companies']" routerLinkActive="router-link-active"><i class="fas fa-list-alt mr-2"></i>Companies</button>
     <button class="side-nav-button px-3 py-2" [routerLink]="['clients']" routerLinkActive="router-link-active"><i class="fas fa-address-book mr-2"></i>Clients</button>
     <button class="side-nav-button px-3 py-2" [routerLink]="['properties']" routerLinkActive="router-link-active"><i class="fas fa-building mr-2"></i>Properties</button>
