--- a/src/app/pages/dashboard/settings/change-password/change-password.component.html
+++ b/src/app/pages/dashboard/settings/change-password/change-password.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-header bg-white p-3">
         <h4>Change Password</h4>
-        <span>Change your password by completing the form below.</span>
+        <span class="text-muted">Change your password by completing the form below.</span>
     </div>
     <div class="card-body">
         <form>
