--- a/src/app/pages/dashboard/users/users.component.html
+++ b/src/app/pages/dashboard/users/users.component.html
@@ -40,10 +40,7 @@
                             </button>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
                                 <button class="dropdown-item" type="button"><i class="fas fa-folder-open"></i>View All Details</button>
-                                <button class="dropdown-item" type="button"><i class="fas fa-address-book"></i>View Portfolio</button>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
+                                <button class="dropdown-item" type="button"><i class="fas fa-edit"></i>Edit Details</button>
                                 <button class="dropdown-item" type="button"><i class="fas fa-users-cog"></i>Make Admin</button>
                                 <li>
                                     <hr class="dropdown-divider">
