--- a/src/app/pages/dashboard/clients/clients.component.html
+++ b/src/app/pages/dashboard/clients/clients.component.html
@@ -11,8 +11,44 @@
             <input type="text" class="form-control" placeholder="Search clients by name, surname, and company...">
         </div>
         <button class="btn btn-light text-nowrap mr-2" data-bs-toggle="offcanvas" data-bs-target="#clientFiltersOffcanvas" aria-controls="clientFiltersOffcanvas"><i class="fas fa-filter mr-2"></i>Filters</button>
-        <button class="btn btn-light text-nowrap"><i class="fas fa-eye mr-2"></i>Display</button>
-        <button class="btn btn-light text-nowrap"><i class="fas fa-file-excel mr-2"></i>Export Excel</button>
+        <div class="dropdown">
+            <button class="btn btn-light text-nowrap mr-2" type="button" id="dropdownMenuDisplay" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="fas fa-eye mr-2"></i>Display
+            </button>
+            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuDisplay">
+                <li>
+                    <div class="dropdown-item">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                ID
+                            </label>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="dropdown-item">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                Full Name
+                            </label>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="dropdown-item">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                Company
+                            </label>
+                        </div>
+                    </div>
+                </li>
+            </div>
+        </div>
+        <button class="btn btn-light text-nowrap" data-bs-toggle="modal" data-bs-target="#exportClientsModal"><i class="fas fa-download mr-2"></i>Export Clients</button>
     </div>
     <table class="custom-table border">
         <thead>
@@ -67,5 +103,23 @@
     </div>
     <div class="offcanvas-body">
 
+    </div>
+</div>
+
+<div class="modal fade" id="exportClientsModal" tabindex="-1" aria-labelledby="exportClientsModal" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Export Clients</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary">Export Clients</button>
+            </div>
+        </div>
     </div>
 </div>
