Made some ui changes

--- a/src/app/pages/dashboard/settings/change-password/change-password.component.html
+++ b/src/app/pages/dashboard/settings/change-password/change-password.component.html
@@ -17,8 +17,7 @@
     </div>
     <div class="card-footer p-3 bg-light">
         <div class="d-flex">
-            <button class="btn btn-light mr-2 ml-auto">Cancel</button>
-            <button class="btn btn-primary">Update Password</button>
+            <button class="btn btn-primary ml-auto">Update Password</button>
         </div>
     </div>
 </div>
