--- a/src/app/pages/dashboard/settings/manage-account/manage-account.component.html
+++ b/src/app/pages/dashboard/settings/manage-account/manage-account.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-header bg-white p-3">
         <h4>Manage Account</h4>
-        <span class="text-muted">Manage your account details by completing the form below.</span>
+        <span class="text-muted">Update your account details by completing the form below.</span>
     </div>
     <div class="card-body">
         <form>
@@ -21,8 +21,7 @@
     </div>
     <div class="card-footer p-3 bg-light">
         <div class="d-flex">
-            <button class="btn btn-light mr-2 ml-auto">Cancel</button>
-            <button class="btn btn-primary">Update Account</button>
+            <button class="btn btn-primary ml-auto">Update Account</button>
         </div>
     </div>
 </div>
