--- a/src/app/pages/dashboard/settings/settings.component.html
+++ b/src/app/pages/dashboard/settings/settings.component.html
@@ -7,6 +7,7 @@
             <div class="list-group box-shadow">
                 <a class="list-group-item list-group-item-action" [routerLink]="['manage-account']" routerLinkActive="active">Manage Account</a>
                 <a class="list-group-item list-group-item-action" [routerLink]="['change-password']" routerLinkActive="active">Change Password</a>
+                <a class="list-group-item list-group-item-action" [routerLink]="['f']" routerLinkActive="active">Update Log</a>
               </div>
         </div>
         <div class="col-8">
