--- a/src/app/pages/dashboard/users/users.component.scss
+++ b/src/app/pages/dashboard/users/users.component.scss
@@ -5,3 +5,11 @@ tr th:last-of-type{
 tr td:last-of-type{
     text-align: end;
 }
+
+.fa-circle{
+    font-size: 10px;
+}
+
+.fa-user-circle{
+    font-size: 32px;
+}
