--- a/src/app/pages/dashboard/clients/clients.component.html
+++ b/src/app/pages/dashboard/clients/clients.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex align-items-center border-bottom p-3">
-    <h3 class="my-0 mr-3">Clients</h3>
+    <h3 class="my-0 mr-2">Clients</h3>
     <button class="btn btn-primary ml-auto"><i class="fas fa-plus-circle mr-2"></i>Add New Client</button>
 </div>
 <div class="container-fluid p-3">
@@ -10,12 +10,12 @@
             </div>
             <input type="text" class="form-control" placeholder="Search clients by name, surname, and company...">
         </div>
-        <button class="btn btn-light text-nowrap mr-2" data-bs-toggle="offcanvas" data-bs-target="#clientFiltersOffcanvas" aria-controls="clientFiltersOffcanvas"><i class="fas fa-filter mr-2"></i>Filters</button>
+        <button class="btn btn-secondary text-nowrap mr-2" data-bs-toggle="offcanvas" data-bs-target="#clientFiltersOffcanvas" aria-controls="clientFiltersOffcanvas"><i class="fas fa-filter mr-2"></i>Filters</button>
         <div class="dropdown">
-            <button class="btn btn-light text-nowrap mr-2" type="button" id="dropdownMenuDisplay" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="fas fa-eye mr-2"></i>Display
+            <button class="btn btn-secondary text-nowrap mr-2" type="button" id="dropdownMenuDisplay" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="fas fa-th mr-2"></i>Display
             </button>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuDisplay">
+            <div class="dropdown-menu dropdown-menu-start" aria-labelledby="dropdownMenuDisplay">
                 <li>
                     <div class="dropdown-item">
                         <div class="form-check">
@@ -48,7 +48,7 @@
                 </li>
             </div>
         </div>
-        <button class="btn btn-light text-nowrap" data-bs-toggle="modal" data-bs-target="#exportClientsModal"><i class="fas fa-download mr-2"></i>Export Clients</button>
+        <button class="btn btn-secondary text-nowrap" data-bs-toggle="modal" data-bs-target="#exportClientsModal"><i class="fas fa-download mr-2"></i>Export</button>
     </div>
     <table class="custom-table border">
         <thead>
@@ -60,6 +60,7 @@
                 <th scope="col">Tags</th>
                 <th scope="col">Last Contact Date</th>
                 <th scope="col">Follow Up Date</th>
+                <th scope="col">Status</th>
                 <th scope="col"></th>
             </tr>
         </thead>
@@ -72,6 +73,9 @@
                 <td><span class="badge rounded-pill bg-primary mr-1">Investor</span><span class="badge rounded-pill bg-primary mr-1">Developer</span></td>
                 <td>10 Jan, 2022</td>
                 <td>12 Jane, 2022</td>
+                <td>
+                    <span class="badge rounded-pill bg-success mr-1">Active</span>
+                </td>
                 <td>
                     <div class="dropdown">
                         <button class="btn btn-light btn-circle" type="button" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -95,14 +99,14 @@
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="clientFiltersOffcanvas" aria-labelledby="clientFiltersOffcanvasLabel">
     <div class="offcanvas-header border-bottom">
-        <div class="d-block">
-            <h4>Filters</h4>
-            <span class="text-muted">Filter the client list using the options below.</span>
-        </div>
+        <h5 class="mb-0">Filters</h5>
         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
-    <div class="offcanvas-body">
-
+    <div class="offcanvas-body d-flex flex-column p-0">
+        <div class="d-flex mt-auto bg-light p-3">
+            <button class="btn btn-secondary w-100 mr-2">Clear Filters</button>
+            <button class="btn btn-primary w-100">Update List</button>
+        </div>
     </div>
 </div>
 
@@ -117,7 +121,7 @@
                 ...
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-secondary mr-2" data-bs-dismiss="modal">Cancel</button>
                 <button type="button" class="btn btn-primary">Export Clients</button>
             </div>
         </div>
