--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <app-top-bar></app-top-bar>
-<div class="side-nav">
-    <p class="small text-gray-500 pl-3 mb-1 mt-3">Lists</p>
+<div class="side-nav d-flex flex-column">
+    <p class="small text-gray-500 pl-3 mb-1 mt-3">Menu</p>
     <button class="side-nav-button px-3 py-2" [routerLink]="['companies']" routerLinkActive="router-link-active"><i class="fas fa-list-alt mr-2"></i>Companies</button>
     <button class="side-nav-button px-3 py-2" [routerLink]="['clients']" routerLinkActive="router-link-active"><i class="fas fa-address-book mr-2"></i>Clients</button>
     <button class="side-nav-button px-3 py-2" [routerLink]="['properties']" routerLinkActive="router-link-active"><i class="fas fa-building mr-2"></i>Properties</button>
@@ -11,6 +11,7 @@
     <button class="side-nav-button px-3 py-2" [routerLink]="['settings']" routerLinkActive="router-link-active"><i class="fas fa-cog mr-2"></i>Settings</button>
     <button class="side-nav-button px-3 py-2" [routerLink]="['help']" routerLinkActive="router-link-active"><i class="fas fa-question-circle mr-2"></i>Help</button> 
     <button class="side-nav-button px-3 py-2" (click)="logout()"><i class="fas fa-sign-out-alt mr-2"></i>Logout</button> 
+    <small class="mt-auto p-3 text-gray-500">Version 1.0.0</small>
 </div>
 <div class="main">
     <router-outlet></router-outlet>
