--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -15,7 +15,7 @@
     text-align: left;
     border: none;
     background-color: $gray-800;
-    color: white;
+    color: $gray-300;
 }
 
 .side-nav-button i {
@@ -23,11 +23,13 @@
 }
 
 .side-nav-button:hover{
-    background-color: rgba($color: $gray-900, $alpha: 0.5);
+    background-color: rgba($color: $gray-900, $alpha: 0.4);
 }
 
 .router-link-active{
-    background-color: $gray-900;
+    background-color: rgba($color: $gray-900, $alpha: 0.6);
+    color: white !important;
+    border-left: 4px solid $primary;
 }
 
 .router-link-active:hover{
