--- a/src/app/pages/dashboard/users/users.component.html
+++ b/src/app/pages/dashboard/users/users.component.html
@@ -7,13 +7,13 @@
 <div *ngIf="!loadingUsers">
     <div class="d-flex align-items-center border-bottom p-3">
         <h3 class="my-0 mr-3">Users</h3>
-        <button class="btn btn-primary ml-auto"><i class="fas fa-plus-circle mr-2"></i>Add New User</button>
+        <button class="btn btn-primary ml-auto" data-bs-toggle="modal" data-bs-target="#userFormModal"><i class="fas fa-plus-circle mr-2"></i>Add New User</button>
     </div>
     <div class="container-fluid p-3">
         <table class="custom-table bg-white border">
             <thead>
                 <tr>
-                    <th scope="col">Full Name</th>
+                    <th scope="col">Account</th>
                     <th scope="col">Email</th>
                     <th scope="col">Date Added</th>
                     <th scope="col">Role</th>
@@ -23,7 +23,15 @@
             </thead>
             <tbody>
                 <tr *ngFor="let user of users">
-                    <td>{{user.name}} {{user.surname}}</td>
+                    <td>
+                        <div class="d-flex align-items-center">
+                            <i class="fas fa-user-circle mr-2"></i>
+                            <div class="d-block">
+                                {{user.name}} {{user.surname}}
+                                <small class="d-flex align-items-center text-muted small"><i class="fas fa-circle text-success mr-1"></i>Online since 12, May 2022 8:57am</small>
+                            </div>
+                        </div>
+                    </td>
                     <td>{{user.email}}</td>
                     <td>November 11, 2021</td>
                     <td>
@@ -31,7 +39,7 @@
                         <span *ngIf="!user.admin">User</span>
                     </td>
                     <td>
-                        <span class="d-flex align-items-center"><i class="fas fa-circle text-success mr-2"></i>Online</span>
+                        <span class="badge rounded-pill bg-success mr-1">Activated</span>
                     </td>
                     <td>
                         <div class="dropdown">
@@ -41,7 +49,7 @@
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
                                 <button class="dropdown-item" type="button"><i class="fas fa-folder-open"></i>View All Details</button>
                                 <button class="dropdown-item" type="button"><i class="fas fa-edit"></i>Edit Details</button>
-                                <button class="dropdown-item" type="button"><i class="fas fa-users-cog"></i>Make Admin</button>
+                                <button class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#makeAdminModal"><i class="fas fa-users-cog"></i>Make Admin</button>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -57,3 +65,6 @@
         </table>
     </div>
 </div>
+
+<app-user-form-dialog></app-user-form-dialog>
+<app-make-admin-dialog></app-make-admin-dialog>
