--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,3 @@
-$primary: #10147c;
-$primary-focus: rgba($primary, 0.9);
-$dark: #212529;
-$secondary: #E9ECEF;
-$light: #F8F9FA;
-$light-focus: #E9ECEF;
-$danger: #D2042D;
-$success: #03C03C;
 $gray-100: #F8F9FA;
 $gray-200: #E9ECEF;
 $gray-300: #DEE2E6;
@@ -15,6 +7,23 @@ $gray-600: #6C757D;
 $gray-700: #495057;
 $gray-800: #343A40;
 $gray-900: #212529;
+
+$primary: #2667ff;
+$secondary: #E9ECEF;
+$dark: #212529;
+$light: #F8F9FA;
+$danger: #f21b3f;
+$success: #29bf12;
+$warning: #ff9914;
+
+$primary-focus: rgba($primary, 0.8);
+$secondary-focus: rgba($secondary, 0.8);
+$dark-focus: rgba($dark, 0.8);
+$danger-focus: rgba($danger, 0.8);
+$light-focus: rgba($light, 0.8);
+$success-focus: rgba($success, 0.8);
+$warning-focus: rgba($warning, 0.8);
+
 $box-shadow: rgba(50, 50, 105, 0.1) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
 
 $theme-colors: (
@@ -52,12 +61,14 @@ body{
 }
 
 //Typography
-$font-size-base: 0.8rem;
+$font-size-base: 0.85rem;
 
 //Form control styles
 $input-focus-box-shadow: none;
 
 //button styles
+$btn-active-border-shade-amount:  5%;
+
 .btn-circle{
   border-radius: 50% !important;
 }
@@ -67,19 +78,35 @@ $input-focus-box-shadow: none;
   height: 14px;
 }
 
+.btn-secondary{
+  border: 1px solid $gray-400 !important;
+}
+
 button i{
   width: 14px;
   height: 14px;
 }
 
-.btn-primary:active:focus {
-  background-color: $primary-focus !important; 
-  border-color: $primary-focus !important;
+.btn:focus {
+  box-shadow: none !important;
 }
 
-.btn-light:active:focus {
-  background-color: $light-focus !important; 
-  border-color: $light-focus !important;
+.btn.btn-primary:active:hover,
+.btn.btn-primary:hover {
+    background-color: #0f55fa;
+}
+
+.btn.btn-secondary:active:hover,
+.btn.btn-secondary:hover {
+    background-color: $gray-300;
+    color: $dark !important;
+}
+
+.btn.btn-light:active:hover,
+.btn.btn-light:hover {
+    background-color: $gray-200;
+    border-color: $gray-200 !important;
+    color: $dark !important;
 }
 
 //table styles
@@ -90,8 +117,8 @@ button i{
 }
 
 .custom-table th, .custom-table td{
-  border-top: 1px solid $gray-300;
-  border-bottom: 1px solid $gray-300;
+  border-top: 1px solid $gray-400;
+  border-bottom: 1px solid $gray-400;
   padding-left: 12px;
   padding-right: 12px;
   padding-top: 8px;
@@ -100,8 +127,8 @@ button i{
 }
 
 //Badge styles
-.badge-primary{
-  background-color: $primary !important;
+.badge{
+  padding: 4px 8px !important;
 }
 
 //Dropdown styles
