--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ $gray-700: #495057;
 $gray-800: #343A40;
 $gray-900: #212529;
 
-$primary: #2a69fd;
+$primary: #2b68f7;
 $secondary: #E9ECEF;
 $dark: #212529;
 $light: #F8F9FA;
