--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,19 +2,23 @@
     <div class="card-body">
         <h1 class="text-center mb-5">Login</h1>
 
-        <label for="email">Email</label>
-        <input type="email" class="form-control shadow-none mb-3" formControlName="email" id="email" placeholder="name@example.com" [ngClass]="{ 'is-invalid': submitted && form.controls.email.errors}">
-        <div class="invalid-feedback">
-            <div *ngIf="form.controls.email.errors?.required">Required field</div>
-            <div *ngIf="form.controls.email.errors?.email">Invalid email</div>
-            <div *ngIf="form.controls.email.errors?.maxlength">Exceeded the max length of 500 characters</div>
+        <div class="mb-3">
+            <label for="email">Email</label>
+            <input type="email" class="form-control shadow-none" formControlName="email" id="email" placeholder="name@example.com" [ngClass]="{ 'is-invalid': submitted && form.controls.email.errors}">
+            <div class="invalid-feedback">
+                <div *ngIf="form.controls.email.errors?.required">Required field</div>
+                <div *ngIf="form.controls.email.errors?.email">Invalid email</div>
+                <div *ngIf="form.controls.email.errors?.maxlength">Exceeded the max length of 500 characters</div>
+            </div>
         </div>
 
-        <label for="password">Password</label>
-        <input type="password" class="form-control shadow-none mb-5" formControlName="password" id="password" placeholder="Password" [ngClass]="{ 'is-invalid': submitted && form.controls.password.errors}">
-        <div class="invalid-feedback">
-            <div *ngIf="form.controls.password.errors?.required">Required field</div>
-            <div *ngIf="form.controls.email.errors?.maxlength">Exceeded the max length of 500 characters</div>
+        <div class="mb-5">
+            <label for="password">Password</label>
+            <input type="password" class="form-control shadow-none" formControlName="password" id="password" placeholder="Password" [ngClass]="{ 'is-invalid': submitted && form.controls.password.errors}">
+            <div class="invalid-feedback">
+                <div *ngIf="form.controls.password.errors?.required">Required field</div>
+                <div *ngIf="form.controls.email.errors?.maxlength">Exceeded the max length of 500 characters</div>
+            </div>
         </div>
 
         <button class="btn btn-primary w-100" (click)="submit()" [disabled]="loading">
@@ -26,3 +30,10 @@
         </button>
     </div>
 </form>
+
+<div class="alert alert-danger alert-dismissible fade text-center" role="alert" [ngClass]="{'show': showFailedLoginAlert, '': !showFailedLoginAlert}">
+    <strong>Error!</strong> Email or password is incorrect. Please try again.
+    <button type="button" class="close" aria-label="Close" (click)="closeAlert()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+</div>
