--- a/src/app/pages/dashboard/settings/settings.component.html
+++ b/src/app/pages/dashboard/settings/settings.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex align-items-center border-bottom p-3">
+<div class="d-flex align-items-center pt-3 px-3">
     <h3 class="my-0 mr-3">Settings</h3>
 </div>
 <div class="container-fluid p-3">
@@ -7,7 +7,6 @@
             <div class="list-group box-shadow">
                 <a class="list-group-item list-group-item-action" [routerLink]="['manage-account']" routerLinkActive="active">Manage Account</a>
                 <a class="list-group-item list-group-item-action" [routerLink]="['change-password']" routerLinkActive="active">Change Password</a>
-                <a class="list-group-item list-group-item-action" [routerLink]="['f']" routerLinkActive="active">Update Log</a>
               </div>
         </div>
         <div class="col-8">
