--- a/src/app/pages/dashboard/users/users.component.html
+++ b/src/app/pages/dashboard/users/users.component.html
@@ -5,12 +5,12 @@
     </div>
 </div>
 <div *ngIf="!loadingUsers">
-    <div class="d-flex align-items-center border-bottom p-3">
+    <div class="d-flex align-items-center px-3 pt-3">
         <h3 class="my-0 mr-3">Users</h3>
         <button class="btn btn-primary ml-auto" data-bs-toggle="modal" data-bs-target="#userFormModal"><i class="fas fa-plus-circle mr-2"></i>Add New User</button>
     </div>
     <div class="container-fluid p-3">
-        <table class="custom-table bg-white border">
+        <table class="custom-table bg-white border box-shadow">
             <thead>
                 <tr>
                     <th scope="col">Account</th>
@@ -43,7 +43,7 @@
                     </td>
                     <td>
                         <div class="dropdown">
-                            <button class="btn btn-light btn-circle" type="button" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <button class="btn btn-secondary btn-circle" type="button" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-ellipsis-v"></i>
                             </button>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
@@ -68,3 +68,4 @@
 
 <app-user-form-dialog></app-user-form-dialog>
 <app-make-admin-dialog></app-make-admin-dialog>
+
