General UI changes

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
     <button disabled class="side-nav-button px-3 py-2 disabled" [routerLink]="['audit-log']" routerLinkActive="router-link-active"><i class="fas fa-history mr-2"></i>Audit Log</button>
     <button class="side-nav-button px-3 py-2" [routerLink]="['users']" routerLinkActive="router-link-active"><i class="fas fa-users mr-2"></i>Users</button>
     <p class="small text-gray-500 pl-3 mb-1 mt-3">General</p>
-    <button class="side-nav-button px-3 py-2" [routerLink]="['settings']" routerLinkActive="router-link-active"><i class="fas fa-cog mr-2"></i>Settings</button>
+    <button class="side-nav-button px-3 py-2" [routerLink]="['account-settings']" routerLinkActive="router-link-active"><i class="fas fa-user-cog mr-2"></i>Account Settings</button>
     <button disabled class="side-nav-button px-3 py-2 disabled" [routerLink]="['help']" routerLinkActive="router-link-active"><i class="fas fa-question-circle mr-2"></i>Help</button>
     <button class="side-nav-button px-3 py-2" (click)="logout()"><i class="fas fa-sign-out-alt mr-2"></i>Logout</button>
     <small class="mt-auto p-3 text-gray-500">Version 1.0.0</small>
